feat: port Touhou Little Maid Orihime to Minecraft 1.21.11 Fabric
Complete the Minecraft 1.21.1 to 1.21.11 Fabric port, including gameplay parity, rendering, persistence, networking, optional compatibility, public documentation, and release automation.