@@ -6,7 +6,6 @@ import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.transfer.info.stack.SlotAccessor;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @SuppressWarnings("UnstableApiUsage")
@@ -18,8 +17,10 @@ public class BackpackTransferHandler implements SimpleTransferHandler {
     private final int inventorySlotStart;
     private final int inventorySlotCount;
 
-
-    public BackpackTransferHandler(Class<? extends MaidMainContainer> containerClass, CategoryIdentifier<?> categoryIdentifier, int recipeSlotStart, int recipeSlotCount, int inventorySlotStart, int inventorySlotCount) {
+    public BackpackTransferHandler(Class<? extends MaidMainContainer> containerClass,
+                                   CategoryIdentifier<?> categoryIdentifier,
+                                   int recipeSlotStart, int recipeSlotCount,
+                                   int inventorySlotStart, int inventorySlotCount) {
         this.containerClass = containerClass;
         this.categoryIdentifier = categoryIdentifier;
         this.recipeSlotStart = recipeSlotStart;
@@ -28,30 +29,28 @@ public class BackpackTransferHandler implements SimpleTransferHandler {
         this.inventorySlotCount = inventorySlotCount;
     }
 
-
     @Override
     public ApplicabilityResult checkApplicable(Context context) {
         if (!containerClass.isInstance(context.getMenu())
                 || !categoryIdentifier.equals(context.getDisplay().getCategoryIdentifier())
                 || context.getContainerScreen() == null) {
             return ApplicabilityResult.createNotApplicable();
-        } else {
-            return ApplicabilityResult.createApplicable();
         }
+        return ApplicabilityResult.createApplicable();
     }
 
     @Override
     public Iterable<SlotAccessor> getInputSlots(Context context) {
         return IntStream.range(recipeSlotStart, recipeSlotStart + recipeSlotCount)
-                .mapToObj(id -> SlotAccessor.fromSlot(context.getMenu().getSlot(id)))
+                .mapToObj(index -> SlotAccessor.fromSlot(context.getMenu().getSlot(index)))
                 .toList();
     }
 
     @Override
     public Iterable<SlotAccessor> getInventorySlots(Context context) {
         AbstractContainerMenu menu = context.getMenu();
-        return IntStream.range(inventorySlotStart, inventorySlotCount)
+        return IntStream.range(inventorySlotStart, inventorySlotStart + inventorySlotCount)
                 .mapToObj(index -> SlotAccessor.fromSlot(menu.getSlot(index)))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
